--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.13",
+    "@netlify/angular-runtime": "^3.0.1",
     "@primeuix/themes": "^2.0.2",
     "@tailwindcss/postcss": "^4.1.18",
     "express": "^5.1.0",
